--- a/styles/moviePreview.module.css
+++ b/styles/moviePreview.module.css
@@ -15,6 +15,9 @@
     padding-top: 2rem;
 }
 
+.previewHeader p{
+    text-align: center;
+}
 .previewRight h2 {
     font-size: 2.5rem;
     color: var(--fontGold);
