--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,8 +3,8 @@
     --backgroundWhite: rgb(34, 32, 32);
     --fontGold: rgb(161, 129, 24);
     --borderGrey: #000000;
-    --fontBlack: #e2dfdf;
-    --glow-color:rgb(161, 129, 24);
+    --fontBlack: rgb(207, 206, 204);
+    --glow-color: rgb(255, 247, 220);
 
 }
 
