--- a/styles/carousel.module.css
+++ b/styles/carousel.module.css
@@ -10,7 +10,7 @@
 .carouselContainer img {
   height: 12vw;
   width: 12vw;
-  border-radius: 10px 10px 0px 0px;
+
 
 }
 
@@ -22,6 +22,7 @@
   border-radius: 10px;
   background-color: var(--fontGold);
   width: 12vw;
+  overflow: hidden;
 
 }
 
