--- a/styles/carousel.module.css
+++ b/styles/carousel.module.css
@@ -10,6 +10,7 @@
 .carouselContainer img {
   height: 12vw;
   width: 12vw;
+  border-radius: 10px 10px 0px 0px;
 
 
 }
@@ -22,7 +23,7 @@
   border-radius: 10px;
   background-color: var(--fontGold);
   width: 12vw;
-  overflow: hidden;
+  
 
 }
 
@@ -85,7 +86,7 @@
   .carouselContainer img {
     height: 15vw;
     width: 15vw;
-    border-radius: 10px;
+    border-radius: 10px 10px 0px 0px;
   }
 }
 
@@ -94,7 +95,7 @@
   .carouselContainer img {
     height: 22vw;
     width: 22vw;
-    border-radius: 10px;
+    border-radius: 10px 10px 0px 0px;
   }
 
 .carouselContainer{
