--- a/styles/footer.module.css
+++ b/styles/footer.module.css
@@ -55,25 +55,25 @@
     --bottom : rgba(100,100,100,.2) ;
     --side : rgba(100,100,100,.5) ;
 
-    --1_top :rgb(161, 129, 24, .8);
-    --1_bottom : rgb(161, 129, 24, .2);
-    --1_side :rgb(161, 129, 24, .5) ;
+    --1_top :rgba(161, 24, 24, 0.8);
+    --1_bottom : rgba(161, 24, 24, 0.2);
+    --1_side :rgba(161, 24, 24, 0.5) ;
 
-    --2_top : rgb(161, 129, 24, .8);
-    --2_bottom :rgb(161, 129, 24, .2) ;
-    --2_side :rgb(161, 129, 24, .5);
+    --2_top : rgba(161, 24, 24, 0.8);
+    --2_bottom :rgba(161, 24, 24, 0.2) ;
+    --2_side :rgba(161, 24, 24, 0.5);
 
-    --3_top : rgb(161, 129, 24, .8) ;
-    --3_bottom : rgb(161, 129, 24, .2) ;
-    --3_side : rgb(161, 129, 24, .5) ;
+    --3_top : rgba(161, 24, 24, 0.8) ;
+    --3_bottom : rgba(161, 24, 24, 0.2) ;
+    --3_side : rgba(161, 24, 24, 0.5) ;
 
-    --4_top : rgb(161, 129, 24, .8) ;
-    --4_bottom :rgb(161, 129, 24, .2) ;
-    --4_side : rgb(161, 129, 24, .5) ;
+    --4_top : rgba(161, 24, 24, 0.8) ;
+    --4_bottom :rgba(161, 24, 24, 0.2) ;
+    --4_side : rgba(161, 24, 24, 0.5) ;
 
-    --5_top : rgb(161, 129, 24, .8) ;
-    --5_bottom : rgb(161, 129, 24, .2) ;
-    --5_side : rgb(161, 129, 24, .5) ;
+    --5_top : rgba(161, 24, 24, 0.8) ;
+    --5_bottom : rgba(161, 24, 24, 0.2) ;
+    --5_side : rgba(161, 24, 24, 0.5) ;
 }
 
 .button{
