--- a/styles/sidebar.module.css
+++ b/styles/sidebar.module.css
@@ -180,3 +180,10 @@
 .activeLink{
   color: var(--fontGold) !important;
 }
+
+@media screen and (max-width : 900px){
+  .closed{
+    width: 0;
+    padding: 0;
+  }
+}
