--- a/styles/search.module.css
+++ b/styles/search.module.css
@@ -45,6 +45,9 @@
     margin-left: 1rem;
 }
 
+.noResult{
+    text-align: center !important;
+}
 @keyframes loading {
     0% {
         transform: rotate(0) scale(1);
